--- a/PicaLoop/AndroidManifest.xml
+++ b/PicaLoop/AndroidManifest.xml
@@ -24,6 +24,8 @@
 
         <activity
             android:name=".WelcomeActivity"
+      		android:screenOrientation="portrait"
+     		android:configChanges="keyboardHidden|orientation|screenSize"          
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
