--- a/PicaLoop/AndroidManifest.xml
+++ b/PicaLoop/AndroidManifest.xml
@@ -17,16 +17,17 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:name="com.picaloopand.picaloop.MyApplication">
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <activity
             android:name=".WelcomeActivity"
-      		android:screenOrientation="portrait"
-     		android:configChanges="keyboardHidden|orientation|screenSize"          
-            android:label="@string/app_name" >
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -51,8 +52,12 @@
             android:value="@string/facebook_app_id" />
 
         <activity
-            android:name=".UserLoggedAcActivity"
-            android:label="@string/title_activity_user_logged_in" >
+            android:name=".UserProfileActivity"
+            android:label="@string/title_activity_user_profile" >
+        </activity>
+        <activity
+            android:name=".CreateALoopActivity"
+            android:label="@string/title_activity_create_aloop" >
         </activity>
     </application>
 
