--- a/PicaLoop/AndroidManifest.xml
+++ b/PicaLoop/AndroidManifest.xml
@@ -14,11 +14,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
-        android:name="com.picaloopand.picaloop.MyApplication">
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -58,6 +58,14 @@
         <activity
             android:name=".CreateALoopActivity"
             android:label="@string/title_activity_create_aloop" >
+        </activity>
+        <activity
+            android:name=".BarFragment"
+            android:label="@string/title_activity_bar" >
+        </activity>
+        <activity
+            android:name=".LoopDetailsActivity"
+            android:label="@string/title_activity_loop_details" >
         </activity>
     </application>
 
