Email sign in, with sign-out, password verification commit

--- a/PicaLoop/bin/AndroidManifest.xml
+++ b/PicaLoop/bin/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".MyApplication"
@@ -67,6 +68,14 @@
             android:name=".LoopDetailsActivity"
             android:label="@string/title_activity_loop_details" >
         </activity>
+        <activity
+            android:name=".EmailLoginActivity"
+            android:label="@string/title_activity_email_login"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
     </application>
+
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
 </manifest>
