--- a/PicaLoop/AndroidManifest.xml
+++ b/PicaLoop/AndroidManifest.xml
@@ -90,6 +90,9 @@
             android:name=".UserProfileActivity"
             android:label="@string/title_activity_user_profile" >
         </activity>
+        <activity
+            android:name=".FullImageActivity">
+        </activity>
     </application>
 
 </manifest>
