--- a/PicaLoop/AndroidManifest.xml
+++ b/PicaLoop/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -21,7 +21,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/PicaLoopTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -63,15 +63,24 @@
         <activity
             android:name=".UserProfileFragment"
             android:label="@string/title_activity_user_profile" >
+            <meta-data
+		        android:name="android.support.PARENT_ACTIVITY"
+		        android:value="com.picaloopand.picaloop.LoopFeedActivity" />
         </activity>
         <activity
             android:name=".CreateALoopActivity"
             android:label="@string/title_activity_create_aloop" >
+            <meta-data
+		        android:name="android.support.PARENT_ACTIVITY"
+		        android:value="com.picaloopand.picaloop.LoopLibraryActivity" />            
         </activity>
         <activity
             android:name=".BarDetailsActivity"
             android:label="@string/title_activity_bar_details"
             android:windowSoftInputMode="adjustPan|stateHidden" >
+            <meta-data
+		        android:name="android.support.PARENT_ACTIVITY"
+		        android:value="com.picaloopand.picaloop.CreateALoopActivity" />            
         </activity>
         <activity
             android:name=".EmailLoginActivity"
@@ -79,8 +88,8 @@
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
         <activity
-            android:name=".NewsFeedActivity"
-            android:label="@string/title_activity_news_feed" >
+            android:name=".LoopFeedActivity"
+            android:label="@string/title_activity_loop_feed" >
         </activity>
         <activity
             android:name=".SettingsActivity"
@@ -89,9 +98,18 @@
         <activity
             android:name=".UserProfileActivity"
             android:label="@string/title_activity_user_profile" >
+            <meta-data
+		        android:name="android.support.PARENT_ACTIVITY"
+		        android:value="com.picaloopand.picaloop.LoopFeedActivity" />            
+        </activity>
+        <activity android:name=".FullImageActivity" >
         </activity>
         <activity
-            android:name=".FullImageActivity">
+            android:name=".LoopLibraryActivity"
+            android:label="@string/title_activity_loop_library" >
+            <meta-data
+		        android:name="android.support.PARENT_ACTIVITY"
+		        android:value="com.picaloopand.picaloop.LoopFeedActivity" />             
         </activity>
     </application>
 
