--- a/PicaLoop/AndroidManifest.xml
+++ b/PicaLoop/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -21,11 +21,16 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/PicaLoopTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="PicaLoop.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="1" />
         <activity
             android:name=".WelcomeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -53,14 +58,27 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
         <activity
-            android:name=".UserProfileActivity"
+            android:name=".UserProfileFragment"
             android:label="@string/title_activity_user_profile" >
+            <meta-data
+		        android:name="android.support.PARENT_ACTIVITY"
+		        android:value="com.picaloopand.picaloop.LoopFeedActivity" />
+        </activity>
+        <activity
+            android:name=".BarDetailsActivity"
+            android:label="@string/title_activity_bar_details"
+            android:windowSoftInputMode="adjustPan|stateHidden" >
+            <meta-data
+		        android:name="android.support.PARENT_ACTIVITY"
+		        android:value="com.picaloopand.picaloop.CreateALoopActivity" />            
         </activity>
         <activity
             android:name=".CreateALoopActivity"
             android:label="@string/title_activity_create_aloop" >
+            <meta-data
+		        android:name="android.support.PARENT_ACTIVITY"
+		        android:value="com.picaloopand.picaloop.LoopLibraryActivity" />            
         </activity>
         <activity
             android:name=".BarFragment"
@@ -69,20 +87,80 @@
         <activity
             android:name=".DrinksDetailsActivity"
             android:label="@string/title_bar"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustPan|stateHidden" >
         </activity>
         <activity
             android:name=".FoodDetailsActivity"
-            android:label="@string/title_food" >
+            android:label="@string/title_food" 
+            android:windowSoftInputMode="adjustPan|stateHidden">
         </activity>
         <activity
             android:name=".MovieDetailsActivity"
-            android:label="@string/title_movie" >
+            android:label="@string/title_movie" 
+            android:windowSoftInputMode="adjustPan|stateHidden">
+        </activity>
+        <activity
+            android:name=".BikeDetailsActivity"
+            android:label="@string/title_bike" 
+            android:windowSoftInputMode="adjustPan|stateHidden">
+        </activity>
+        <activity
+            android:name=".GroceryDetailsActivity"
+            android:label="@string/title_grocery"
+            android:windowSoftInputMode="adjustPan|stateHidden" >
+        </activity>
+                <activity
+            android:name=".WaterDetailsActivity"
+            android:label="@string/title_water" 
+            android:windowSoftInputMode="adjustPan|stateHidden">
+        </activity>
+                <activity
+            android:name=".HotelDetailsActivity"
+            android:label="@string/title_hotel" 
+            android:windowSoftInputMode="adjustPan|stateHidden">
+        </activity>
+                <activity
+            android:name=".AirportDetailsActivity"
+            android:label="@string/title_airport" 
+            android:windowSoftInputMode="adjustPan|stateHidden">
+        </activity>
+                <activity
+            android:name=".PhotoDetailsActivity"
+            android:label="@string/title_photo" 
+            android:windowSoftInputMode="adjustPan|stateHidden">
+        </activity>
+                <activity
+            android:name=".LibraryDetailsActivity"
+            android:label="@string/title_library" 
+            android:windowSoftInputMode="adjustPan|stateHidden">
+        </activity>
+                <activity
+            android:name=".NatureDetailsActivity"
+            android:label="@string/title_nature" 
+            android:windowSoftInputMode="adjustPan|stateHidden">
+        </activity>
+                <activity
+            android:name=".PaintingDetailsActivity"
+            android:label="@string/title_painting" 
+            android:windowSoftInputMode="adjustPan|stateHidden">
         </activity>
         <activity
             android:name=".EmailLoginActivity"
             android:label="@string/title_activity_email_login"
             android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
+        <activity
+            android:name=".NewsFeedActivity"
+            android:label="@string/title_activity_news_feed" >
+        </activity>
+                <activity
+            android:name=".LoopFeedActivity"
+            android:label="@string/title_activity_loop_feed" >
+        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings" >
         </activity>
         <activity
             android:name=".LoopDetailViewActivity"
@@ -96,6 +174,19 @@
             android:name=".ImageAdapter"
             android:label="@string/title_activity_image_adapter" >
         </activity>
+                <activity
+            android:name=".UserProfileActivity"
+            android:label="@string/title_activity_user_profile" >
+        </activity>
+                <activity
+            android:name=".FullImageActivity">
+        </activity>
+        <activity
+            android:name=".LoopLibraryActivity"
+            android:label="@string/title_activity_loop_library" >
+            <meta-data
+		        android:name="android.support.PARENT_ACTIVITY"
+		        android:value="com.picaloopand.picaloop.LoopFeedActivity" />             
+        </activity>
     </application>
-
 </manifest>
