--- a/PicaLoop/AndroidManifest.xml
+++ b/PicaLoop/AndroidManifest.xml
@@ -115,13 +115,17 @@
             android:name=".LoopDetailsViewActivity"
             android:label="@string/title_activity_loop_details_view" >
         </activity>
-         <activity
+        <activity
             android:name=".RegisterFragment"
             android:label="@string/title_activity_email_registeration" >
         </activity>
         <activity
             android:name=".LoopGridActivity"
             android:label="@string/title_activity_loop_grid" >
+        </activity>
+        <activity
+            android:name=".CreateASpotActivity"
+            android:label="@string/title_activity_create_aspot" >
         </activity>
     </application>
 
