--- a/PicaLoop/AndroidManifest.xml
+++ b/PicaLoop/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="21" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -15,6 +18,12 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<!-- The following two permissions are not required to use
+     Google Maps Android API v2, but are recommended. -->
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:name=".MyApplication"
@@ -119,6 +128,14 @@
             android:name=".LoopGridActivity"
             android:label="@string/title_activity_loop_grid" >
         </activity>
+        <activity
+            android:name=".LoopMapViewActivity"
+            android:label="@string/title_activity_loop_map_view" >
+        </activity>
+                <meta-data
+    android:name="com.google.android.maps.v2.API_KEY"
+    android:value="AIzaSyB5RX0sJ3hjaocCLJM6YoMsB471DanTYbg"/>
     </application>
 
 </manifest>
+
