--- a/PicaLoop/project.properties
+++ b/PicaLoop/project.properties
@@ -14,4 +14,4 @@
 target=Google Inc.:Google APIs:21
 android.library.reference.1=../appcompat_v7
 android.library.reference.2=../facebook
-android.library.reference.3=../google-play-services_lib
+android.library.reference.3=../../../Desktop/adt-bundle-mac-x86_64-20140702/sdk/extras/google/google_play_services/libproject/google-play-services_lib
